test/ui/test/name-resolution/exposure/access-private-constructors.stderr
error[E029]: binding ‘topmost.separation.Private’ is private
   ┌─ ${TEST_FOLDER}/name-resolution/exposure/access-private-constructors.lushui:23:16
   │
23 │ use separation.Private.private as p0
   │                ═══════
   │

error[E029]: binding ‘topmost.separation.Private-Abstract’ is private
   ┌─ ${TEST_FOLDER}/name-resolution/exposure/access-private-constructors.lushui:24:16
   │
24 │ use separation.Private-Abstract.private as p1
   │                ════════════════
   │

error[E029]: binding ‘topmost.separation.Public-Abstract.private’ is private
   ┌─ ${TEST_FOLDER}/name-resolution/exposure/access-private-constructors.lushui:25:32
   │
25 │ use separation.Public-Abstract.private as p2
   │                                ═══════
   │

error[E029]: binding ‘topmost.separation.Public-Abstract.private’ is private
   ┌─ ${TEST_FOLDER}/name-resolution/exposure/access-private-constructors.lushui:27:61
   │
27 │ p3: separation.Public-Abstract = separation.Public-Abstract.private
   │                                                             ═══════
   │

error[E029]: binding ‘topmost.separation.further-separation.Hidden’ is private
   ┌─ ${TEST_FOLDER}/name-resolution/exposure/access-private-constructors.lushui:29:37
   │
29 │ use separation.further-separation.((Hidden.hidden as h) (Abstract.hidden as ho))
   │                                     ══════
   │

error[E029]: binding ‘topmost.separation.further-separation.Abstract.hidden’ is private
   ┌─ ${TEST_FOLDER}/name-resolution/exposure/access-private-constructors.lushui:29:67
   │
29 │ use separation.further-separation.((Hidden.hidden as h) (Abstract.hidden as ho))
   │                                                                   ══════
   │

error: aborting due to 6 previous errors

