test/ui/test/name-resolution/exposure/access-private-constructors.lushui
module separation of
    use extern.core.type.Type

    data Private: Type of
        private: Private
    
    @abstract
    data Private-Abstract: Type of
        private: Private-Abstract

    @public @abstract
    data Public-Abstract: Type of
        private: Public-Abstract
    
    @(public topmost)
    module further-separation of
        @(public super)
        data Hidden: super.Type of
            hidden: Hidden
        
        @(public topmost) @abstract
        data Abstract: super.Type of
            hidden: Abstract

use separation.Private.private as p0
use separation.Private-Abstract.private as p1
use separation.Public-Abstract.private as p2

p3: separation.Public-Abstract = separation.Public-Abstract.private

use separation.further-separation.((Hidden.hidden as h) (Abstract.hidden as ho))
